Updated some errors and link on page

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
     <!-- header section end -->
 
     <!-- bg section start -->
-   <section id="bg" class="sec-pad">
+   <section  class="bg sec-pad">
     <div class="container">
       <div class="row">
        <div class="col-12">
@@ -126,7 +126,7 @@
 
               We are always and all times 24/7. So request a quote now if you have any design you need, and get a reply within an hour. So you can keep trust with MisDan.
             </p>
-            <button class="misBtn">learn more</button>
+            <a href="about.html" class="misBtn">learn more</a>
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
     <!-- About section end -->
    
     <!-- About Bg Start  -->
-    <section id="bg" class="sec-pad">
+    <section  class="sec-pad bg">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-3 my-4 my-md-0">
@@ -155,12 +155,12 @@
     <!-- About Bg Eng  -->
 
     <!-- Team section start -->
-    <section id="Team" class="sec-pad">
+    <div id="Team" class="sec-pad">
       <div class="container">
         <div class="row section-head">
           <div class="sec-title bar text-center">
             <h2 class="title">Innovative Team</h2>
-            <img src="img/bar.png" alt="bar">
+            <img src="img/bar.png" alt="img/bar.png">
           </div>
         </div>
         <div class="row mt-5">
@@ -188,7 +188,7 @@
 
         </div>
       </div>
-    </section>
+    </div>
     <!-- Team section end -->
 
       <!-- request section start -->
@@ -200,9 +200,7 @@
             </div>
             <div class="col-12 text-center">
               <h4 class="req_txt">Submit your request now !</h4>
-               <a href="#">
-                <button class="misBtn">Check Pricing</button>
-               </a>
+                <a href="price.html" class="misBtn">Check Pricing</a>
             </div>
           </div>
         </div>
@@ -267,7 +265,7 @@
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
-               <input type="email" name="" id="email" placeholder="Your Mail">
+               <input type="email" name="email" id="email" placeholder="Your Mail">
                <button type="submit" class="d-block misBtn">Subscribe</button>
              </div>
            </div>
@@ -288,7 +286,6 @@
       </div>
     </footer>
     <!-- footer section end -->
-
     <!-- Script tage goes here -->
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
