--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
     <!-- Header section end -->
 
   <!-- bg section start -->
-  <section id="bg" class="sec-pad">
+  <section  class="sec-pad bg">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -129,7 +129,7 @@
                   <input type="text" class="form-control" id="name" placeholder="Your Name*">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="email" placeholder="Email Address">
+                  <input type="email" class="form-control" placeholder="Email Address">
                 </div>
               </div>
               <div class="form-group">
@@ -147,7 +147,7 @@
                 </select>
               </div>
               <div class="form-group">
-                <select class="custom-select" id="service">
+                <select class="custom-select" id="country">
                   <option selected>Country*</option>
                   <option value="1">One</option>
                   <option value="2">Two</option>
@@ -155,7 +155,7 @@
                 </select>
               </div>
               <div class="form-group">
-              <textarea name="" id="" cols="" rows="8" class="w-100 p-3" placeholder="Instructions"></textarea>
+              <textarea name="Instructions"  rows="8" class="w-100 p-3" placeholder="Instructions"></textarea>
               </div>
              
             </form>
@@ -233,7 +233,7 @@
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
-               <input type="email" name="" id="email" placeholder="Your Mail">
+               <input type="email" name="email" id="email" placeholder="Your Mail">
                <button type="submit" class="d-block misBtn">Subscribe</button>
              </div>
            </div>
