--- a/price.html
+++ b/price.html
@@ -97,7 +97,7 @@
     <!-- Header section end -->
   
     <!-- bg section start -->
-   <section id="bg" class="sec-pad">
+   <section  class="sec-pad bg">
     <div class="container">
       <div class="row">
        <div class="col-12">
@@ -436,8 +436,8 @@
 
         <!-- login/sign in btns -->
         <ul id="log_sign" class="d-flex">
-          <li><a href="#"><button class="misBtn">free quote</button></a></li>
-          <li><a href="#"><button class="misBtn">create free account</button></a></li>
+          <li><a href="contact.html" class="misBtn">free quote</a></li>
+          <li><button class="misBtn">create free account</button></li>
         </ul>
       </div>
     </section>
@@ -452,9 +452,7 @@
             </div>
             <div class="col-12 text-center">
               <h4 class="req_txt">Submit your request now !</h4>
-                <a href="#">
                 <button class="misBtn">Get Started</button>
-                </a>
             </div>
           </div>
         </div>
@@ -519,7 +517,7 @@
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
-               <input type="email" name="" id="email" placeholder="Your Mail">
+               <input type="email" name="email" id="email" placeholder="Your Mail">
                <button type="submit" class="d-block misBtn">Subscribe</button>
              </div>
            </div>
