--- a/service.html
+++ b/service.html
@@ -97,7 +97,7 @@
     <!-- Header section end -->
   
     <!-- bg section start -->
-   <section id="bg" class="sec-pad">
+   <section  class="sec-pad bg">
     <div class="container">
       <div class="row">
        <div class="col-12">
@@ -168,7 +168,6 @@
            </div>
           </div>
          </div>
-         </div>
          <div class="our_service video_pro bg_size mb-5">
           <div class="container">
            <div class="row s-box">
@@ -186,8 +185,7 @@
             </div>
            </div>
           </div>
-         </div>   
-      </div>
+         </div>
     </section>
     <!-- Service section end -->
 
@@ -200,9 +198,7 @@
         </div>
         <div class="col-12 text-center">
           <h4 class="req_txt">Submit your request now !</h4>
-            <a href="#">
-            <button class="misBtn">Check Pricing</button>
-            </a>
+            <a href="price.html" class="misBtn">Check Pricing</a>
         </div>
       </div>
     </div>
@@ -266,7 +262,7 @@
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
-               <input type="email" name="" id="email" placeholder="Your Mail">
+               <input type="email" name="email" id="email" placeholder="Your Mail">
                <button type="submit" class="d-block misBtn">Subscribe</button>
              </div>
            </div>
