--- a/work.html
+++ b/work.html
@@ -345,9 +345,7 @@
           </div>
           <div class="col-12 text-center">
             <h4 class="req_txt">Submit your request now !</h4>
-             <a href="#">
-              <button class="misBtn">Check Pricing</button>
-             </a>
+              <a href="price.html" class="misBtn">Check Pricing</a>
           </div>
         </div>
       </div>
@@ -412,7 +410,7 @@
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
-               <input type="email" name="" id="email" placeholder="Your Mail">
+               <input type="email" name="email" id="email" placeholder="Your Mail">
                <button type="submit" class="d-block misBtn">Subscribe</button>
              </div>
            </div>
