--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
             <img src="img/about/img_2.png" alt="designer">
           </div>
           <div class="col-md-3 my-4 my-md-0">
-            <img src="img/about/img_3.png" alt="satisfied">
+            <img src="img/about/satisfiction.png" alt="satisfied">
           </div>
           <div class="col-md-3 my-4 my-md-0">
             <img src="img/about/img_4.png" alt="project">
