--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
+  <!-- preloader -->
+
     <!-- topbar section start -->
     <div class="" id="topBar">
         <div class="container">
@@ -51,50 +52,50 @@
     </div>
     <!-- topbar section end -->
   
-    <!-- header section start -->
-   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="about.html">about us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">works</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="price.html">pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">free trail</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-                <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-              </form>
-            </div>
-        </div>
-      </nav>
-   </header>
-    <!-- header section end -->
+    <!-- Header section start -->
+    <header>
+      <nav class="navbar navbar-expand-xl navbar-light bg-light">
+          <div class="container">
+              <a class="navbar-brand" href="#">
+                  <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+              </button>
+            
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto">
+                  <li class="nav-item ">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="about.html">about us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="service.html">services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">works</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="price.html">pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">free trail</a>
+                  </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+                  <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                </form>
+              </div>
+          </div>
+        </nav>
+     </header>
+      <!-- Header section end -->
 
     <!-- bg section start -->
    <section  class="bg sec-pad">
@@ -133,21 +134,47 @@
     </section>
     <!-- About section end -->
    
-    <!-- About Bg Start  -->
-    <section  class="sec-pad bg">
+    <!-- counter  Bg Start  -->
+    <section id="counter"  class="sec-pad bg">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-md-3 my-4 my-md-0">
-            <img src="assets/img/about/img_1.png" alt="hour">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-12  my-4 my-lg-0 d_center">
+            <div class="counter-box">
+              <i class="fas fa-hourglass-start"></i>
+					    <div class="count d-flex">
+                <span class="sym">$</span>
+                <span class="counter">10</span>
+              </div>
+					    <h3 class="counter_title">cost per hour</h3>
+            </div>
           </div>
-          <div class="col-md-3 my-4 my-md-0">
-            <img src="assets/img/about/img_2.png" alt="designer">
+          <div class="col-lg-3 col-md-6 col-12  my-4 my-lg-0 d_center">
+            <div class="counter-box">
+              <i class="fas fa-users"></i>
+					    <div class="count d-flex">
+                <span class="counter">10</span>
+              </div>
+					    <h3 class="counter_title">certified Designer</h3>
+            </div>
           </div>
-          <div class="col-md-3 my-4 my-md-0">
-            <img src="assets/img/about/satisfiction.png" alt="satisfied">
+          <div class="col-lg-3 col-md-6 col-12  my-4 my-lg-0 d_center">
+            <div class="counter-box">
+              <img src="assets/img/counter/client.png " alt="review">
+					    <div class="count d-flex">
+               <span class="counter">97</span>
+               <span class="sym">%</span>
+              </div>
+					    <h3 class="counter_title">cost per hour</h3>
+            </div>
           </div>
-          <div class="col-md-3 my-4 my-md-0">
-            <img src="assets/img/about/img_4.png" alt="project">
+          <div class="col-lg-3 col-md-6 col-12  my-4 my-lg-0 d_center">
+            <div class="counter-box">
+              <img src="assets/img/counter/complete.png" alt="complete">
+					    <div class="count d-flex">
+               <span class="counter">297</span>
+              </div>
+					    <h3 class="counter_title">Project Complete</h3>
+            </div>
           </div>
         </div>
       </div>
@@ -207,7 +234,11 @@
       </section>
       <!-- request section end -->
 
-  
+      <div class="top-btm">
+        <i class="fas fa-chevron-up"></i>
+      </div>
+
+
     <!-- footer section start -->
     <footer>
       <div class="container">
@@ -240,7 +271,7 @@
              <li><a href="contact.html">Contact us</a></li>
            </ul>
          </div>
-         <div class="col-md-3 col-6">
+         <div class="col-md-3 col-12">
            <ul class="head">
              <li class="title mb-3">Services</li>
              <li><a href="#">image processing</a></li>
@@ -259,7 +290,7 @@
              </ul>
            </div>
          </div>
-         <div class="col-md-3 col-6 flex">
+         <div class="col-md-3 col-12 my-5 my-sm-0 flex">
            <div class="head">
              <div class="title mb-3">Newsletter</div>
 
@@ -286,10 +317,25 @@
       </div>
     </footer>
     <!-- footer section end -->
+
+
     <!-- Script tage goes here -->
-    <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
+    <script src="assets/js/jquery-1.12.4.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/waypoints.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="assets/js/app.js"></script>
+
+    <script>
+              jQuery(document).ready(function($) {
+            $('.counter').counterUp({
+                delay: 10,
+                time: 1000
+            });
+        });
+    </script>
+
+
 </body>
 </html>
