--- a/price.html
+++ b/price.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIS DAN</title>
+    <!-- Favicon -->
+    <link rel="icon" href="assets/img/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="assets/img/favicon/favicon-32x32.png" type="image/gif" sizes="32x32">
+    <link rel="icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/gif" sizes="512x512">
+    <link rel="icon" href="assets/img/favicon/android-chrome-192x192.png" type="image/gif" sizes="192x192">
     <!-- fontawesome -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap -->
@@ -13,6 +18,8 @@
 </head>
 <body>
   
+  <!-- preloader -->
+
     <!-- topbar section start -->
     <div class="" id="topBar">
         <div class="container">
@@ -52,49 +59,49 @@
     <!-- topbar section end -->
   
     <!-- Header section start -->
-   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto">
-                <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">about us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="work.html">works</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="price.html">pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">free trail</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-                <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-              </form>
-            </div>
-        </div>
-      </nav>
-   </header>
-    <!-- Header section end -->
+    <header>
+      <nav class="navbar navbar-expand-xl navbar-light bg-light">
+          <div class="container">
+              <a class="navbar-brand" href="#">
+                  <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+              </button>
+            
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto">
+                  <li class="nav-item ">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">about us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="service.html">services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="work.html">works</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="price.html">pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">free trail</a>
+                  </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+                  <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                </form>
+              </div>
+          </div>
+        </nav>
+     </header>
+      <!-- Header section end -->
   
     <!-- bg section start -->
    <section  class="sec-pad bg">
@@ -443,22 +450,24 @@
     </section>
     <!-- price section end -->
 
-      <!-- request section start -->
-      <section id="request" class="">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h2 class="req_title text-center">100% Trusted Graphics Solution!</h2>
-            </div>
-            <div class="col-12 text-center">
-              <h4 class="req_txt">Submit your request now !</h4>
-                <button class="misBtn">Get Started</button>
-            </div>
+    <!-- request section start -->
+    <section id="request" class="">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="req_title text-center">100% Trusted Graphics Solution!</h2>
+          </div>
+          <div class="col-12 text-center">
+            <h4 class="req_txt">Submit your request now !</h4>
+              <button class="misBtn">Get Started</button>
           </div>
         </div>
-        </section>
-      <!-- request section end -->
-
+      </div>
+      </section>
+    <!-- request section end -->
+    <div class="top-btm">
+      <i class="fas fa-chevron-up"></i>
+    </div>
 
     <!-- footer section start -->
     <footer>
@@ -492,7 +501,7 @@
              <li><a href="contact.html">Contact us</a></li>
            </ul>
          </div>
-         <div class="col-md-3 col-6">
+         <div class="col-md-3 col-12">
            <ul class="head">
              <li class="title mb-3">Services</li>
              <li><a href="#">image processing</a></li>
@@ -511,7 +520,7 @@
              </ul>
            </div>
          </div>
-         <div class="col-md-3 col-6 flex">
+         <div class="col-md-3 col-12 my-5 my-sm-0 flex">
            <div class="head">
              <div class="title mb-3">Newsletter</div>
 
@@ -540,7 +549,9 @@
     <!-- footer section end -->
 
     <!-- Script tage goes here -->
-    <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
+    <!-- <script src="assets/js/jquery-3.5.1.slim.min.js"></script> -->
+    <script src="assets/js/jquery-1.12.4.min.js"></script>
+
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/app.js"></script>
