--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
               <i class="fas fa-hourglass-start"></i>
 					    <div class="count d-flex">
                 <span class="sym">$</span>
-                <span class="counter">10</span>
+                <span class="">10</span>
               </div>
 					    <h3 class="counter_title">cost per hour</h3>
             </div>
@@ -164,7 +164,7 @@
                <span class="counter">97</span>
                <span class="sym">%</span>
               </div>
-					    <h3 class="counter_title">cost per hour</h3>
+					    <h3 class="counter_title">Satiesfied Client </h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-12  my-4 my-lg-0 d_center">
@@ -321,6 +321,7 @@
 
     <!-- Script tage goes here -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/waypoints.js"></script>
@@ -328,7 +329,7 @@
     <script src="assets/js/app.js"></script>
 
     <script>
-              jQuery(document).ready(function($) {
+            jQuery(document).ready(function($) {
             $('.counter').counterUp({
                 delay: 10,
                 time: 1000
