--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                   <input type="text" class="form-control" id="name" placeholder="Your Name*">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" placeholder="Email Address">
+                  <input type="email" class="form-control" placeholder="Email Address*">
                 </div>
               </div>
               <div class="form-group">
