--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
          </div>
         </div>
         <div class="row py-5">
-          <div class="col-lg-6 order-2 order-lg-0">
+          <div class="col-xl-6 order-2 order-xl-0">
             <p class="abt-txt mb-3">
               MisDan is a professional Graphic, website and UI, UX, Web Development & Video Production Company. We provide any design & IT related services for your 
 company daily weekly monthly even yearly basis in very prominent price and provide world-class customer 
@@ -228,7 +228,7 @@ service to our honorable customers.
             </p>
             <a href="about.html" class="misBtn animate__animated animate__bounceIn">learn more</a>
           </div>
-          <div class="col-lg-6 order-1 order-lg-0 d_center my-4 my-lg-0">
+          <div class="col-xl-6 order-1 order-xl-0 d_center my-4 my-xl-0">
             <div class="abt_img">
              <!-- <div class="content_img">
               <img src="assets/img/about/HomePage--MISDAN-1410px.png" alt="about" class="img-fluid">
@@ -262,7 +262,7 @@ service to our honorable customers.
 
           <div class="container">
            <div class="row s-box">
-             <div class="col-12 col-sm-8 pl-5 pl-md-0">
+             <div class="col-12 col-sm-8 pl-4 pl-xl-0">
                <h3 class="title">Image Processing</h3>
                <p class="txt">MisDan is a professional Graphics design Company. We provide photoshop work, background removing, transparent background, white background, Image retouch, object remove or add, color correction, path, masking and so on.</p>
             
@@ -276,7 +276,7 @@ service to our honorable customers.
 
           <div class="container">
            <div class="row s-box">
-             <div class="col-12 col-sm-8 pl-5 pl-md-0">
+             <div class="col-12 col-sm-8 pl-4 pl-xl-0">
               <h3 class="title">Graphics Solution</h3>
               <p class="txt">
                MisDan is a professional Graphics company and provide illustrator work, logo design, book cover, flyer, banner, google ads, social media ads, social media cover, festival flyer, church flyer, Christmas flyer, new year flyer, brochure, company profile, menu design, leaflet, greetings card, thank you card, business card ans much more.  
@@ -292,7 +292,7 @@ service to our honorable customers.
 
           <div class="container">
            <div class="row s-box">
-             <div class="col-12 col-sm-8 pl-5 pl-md-0">
+             <div class="col-12 col-sm-8 pl-4 pl-xl-0">
               <h3 class="title">Web UI & Development</h3>
               <p class="txt">
                 MisDan have an all-out solution to website design for the best experience. A bunch of talented minds are working delicately to offer an attractive, dynamic as well as user-friendly website. We are starting from a complete UI to Development a site. 
@@ -306,7 +306,7 @@ service to our honorable customers.
 
           <div class="container">
            <div class="row s-box">
-             <div class="col-12 col-sm-8 pl-5 pl-md-0">
+             <div class="col-12 col-sm-8 pl-4 pl-xl-0">
               <h3 class="title">Video Processing</h3>
               <p class="txt">
                 MisDan served with intro video, white bpoard presentation, motion graphics, tvc short ads, cartoon animation
@@ -575,7 +575,7 @@ service to our honorable customers.
          </div>
         </div>
         <div class="row work_process">
-          <div class="col-lg-3 col-md-6 my-3 my-lg-0">
+          <div class="col-xl-3 col-md-6 my-3 my-xl-0">
             <div class="round_box_img text-center">
               <img src="assets/img/workPlan/work_1.png" alt="create Designs img" class="img-fluid">
             </div>
@@ -587,7 +587,7 @@ service to our honorable customers.
               your project.
             </p>
           </div>
-          <div class="col-lg-3 col-md-6 my-3 my-lg-0">
+          <div class="col-xl-3 col-md-6 my-3 my-xl-0">
             <div class="round_box_img text-center">
               <img src="assets/img/workPlan/work_2.png" alt="create Designs img" class="img-fluid">
             </div>
@@ -599,7 +599,7 @@ service to our honorable customers.
               until your satisfaction.
             </p>
           </div>
-          <div class="col-lg-3 col-md-6 my-3 my-lg-0">
+          <div class="col-xl-3 col-md-6 my-3 my-xl-0">
             <div class="round_box_img text-center">
               <img src="assets/img/workPlan/work_3.png" alt="create Designs img" class="img-fluid">
             </div>
@@ -610,7 +610,7 @@ service to our honorable customers.
               and download your design.
             </p>
           </div>
-          <div class="col-lg-3 col-md-6 my-3 my-lg-0">
+          <div class="col-xl-3 col-md-6 my-3 my-xl-0">
             <div class="round_box_img text-center">
               <img src="assets/img/workPlan/work_4.png" alt="create Designs img" class="img-fluid">
             </div>
