--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- topbar section end -->
 
     <!-- Header section start -->
-    <header>
+    <header class="header">
         <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
