--- a/contact.html
+++ b/contact.html
@@ -85,51 +85,53 @@
   </section>
   <!-- topbar section end -->
 
-  <!-- Header section start -->
-  <header>
-    <nav class="navbar navbar-expand-xl navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
+      <!-- Header section start -->
+      <header class="header">
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">about us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="service.html">services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="work.html">works</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="price.html">pricing</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">contact us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">free trail</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-            <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-          </form>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!-- Header section end -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">about us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="service.html">services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="work.html">works</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="price.html">pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">free trail</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+                        <button class="btn  my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Header section end -->
+
   <!-- bg section start -->
   <section class="sec-pad bg">
     <div class="container">
