removed sec-pad class

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <!-- banner section end -->
 
     <!-- About section start -->
-    <section id="about" class="sec-pad">
+    <section class="about">
         <div class="container">
             <div class="row section-head">
                 <div class="sec-title  text-center">
@@ -311,7 +311,7 @@
 
 
     <!-- Service section start -->
-    <section id="services" class="sec-pad">
+    <section id="services">
         <div class="container">
             <div class="row section-head mb-5">
                 <div class="sec-title bar text-center">
@@ -394,7 +394,7 @@
     <!-- Service section end -->
 
     <!-- gallery section start -->
-    <section id="gallery" class="sec-pad">
+    <section id="gallery">
         <div class="container">
 
             <div class="row section-head">
@@ -545,7 +545,7 @@
     <!-- gallery section end -->
 
     <!-- clients section start -->
-    <section id="client" class="sec-pad">
+    <section id="client">
         <div class="container">
             <div class="row section-head">
                 <div class="sec-title bar text-center">
@@ -652,7 +652,7 @@
     <!-- clients section end -->
 
     <!--work section start -->
-    <section id="work" class="sec-pad">
+    <section id="work">
         <div class="container">
             <div class="row section-head">
                 <div class="sec-title bar text-center">
